# GitNotify

./: .env.example  .gitignore  Cargo.toml  README.md  changelog.md  cheat-sheet.md  install.md
migrations/: initial_schema.sql
src/: main.rs
src/bot/: dialogue.rs  mod.rs  ui.rs
src/core/: events.rs  git_service.rs  mod.rs  updater.rs
src/infrastructure/: db.rs  logging.rs
