[package]
name = "GitNotify"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
git2 = "0.18"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dotenv = "0.15"
thiserror = "1.0"
sha2 = "0.10"
anyhow = "1.0"
